--- a/packages/qiao.indexeddb.js/test/test.html
+++ b/packages/qiao.indexeddb.js/test/test.html
@@ -8,6 +8,7 @@
 <body>
     <!-- <script src="../dist/open-db.js"></script> -->
     <!-- <script src="../dist/create-table.js"></script> -->
-    <script src="../dist/open-db-and-create-table.js"></script>
+    <!-- <script src="../dist/open-db-and-create-table.js"></script> -->
+    <script src="../dist/create-index.js"></script>
 </body>
 </html>
