--- a/packages/qiao.indexeddb.js/test/test.html
+++ b/packages/qiao.indexeddb.js/test/test.html
@@ -8,6 +8,6 @@
 <body>
     <!-- <script src="../dist/open-db.js"></script> -->
     <!-- <script src="../dist/create-table.js"></script> -->
-    <script src="../dist/add-data.js"></script>
+    <script src="../dist/add.js"></script>
 </body>
 </html>
