--- a/packages/qiao.indexeddb.js/test/test.html
+++ b/packages/qiao.indexeddb.js/test/test.html
@@ -9,10 +9,11 @@
     <!-- <script src="../dist/open-db.js"></script> -->
     <!-- <script src="../dist/del-db.js"></script> -->
     <!-- <script src="../dist/create-table.js"></script> -->
-    <script src="../dist/del-table.js"></script>
+    <!-- <script src="../dist/del-table.js"></script> -->
     <!-- <script src="../dist/get.js"></script> -->
     <!-- <script src="../dist/add.js"></script> -->
     <!-- <script src="../dist/put.js"></script> -->
     <!-- <script src="../dist/del.js"></script> -->
+    <script src="../dist/clear.js"></script>
 </body>
 </html>
