--- a/packages/qiao.indexeddb.js/test/test.html
+++ b/packages/qiao.indexeddb.js/test/test.html
@@ -13,7 +13,8 @@
     <!-- <script src="../dist/get.js"></script> -->
     <!-- <script src="../dist/add.js"></script> -->
     <!-- <script src="../dist/put.js"></script> -->
+    <script src="../dist/save.js"></script>
     <!-- <script src="../dist/del.js"></script> -->
-    <script src="../dist/clear.js"></script>
+    <!-- <script src="../dist/clear.js"></script> -->
 </body>
 </html>
