--- a/packages/qiao.indexeddb.js/test/test.html
+++ b/packages/qiao.indexeddb.js/test/test.html
@@ -10,11 +10,11 @@
     <!-- <script src="../dist/del-db.js"></script> -->
     <!-- <script src="../dist/create-table.js"></script> -->
     <!-- <script src="../dist/del-table.js"></script> -->
-    <!-- <script src="../dist/get.js"></script> -->
     <!-- <script src="../dist/add.js"></script> -->
+    <!-- <script src="../dist/get.js"></script> -->
     <!-- <script src="../dist/put.js"></script> -->
-    <script src="../dist/save.js"></script>
+    <!-- <script src="../dist/save.js"></script> -->
     <!-- <script src="../dist/del.js"></script> -->
-    <!-- <script src="../dist/clear.js"></script> -->
+    <script src="../dist/clear.js"></script>
 </body>
 </html>
