--- a/packages/qiao.indexeddb.js/test/test.html
+++ b/packages/qiao.indexeddb.js/test/test.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- <script src="../dist/open-db.js"></script> -->
+    <!-- <script src="../dist/list-db.js"></script> -->
     <!-- <script src="../dist/del-db.js"></script> -->
     <!-- <script src="../dist/create-table.js"></script> -->
     <!-- <script src="../dist/del-table.js"></script> -->
