--- a/packages/qiao.indexeddb.js/test/index.html
+++ b/packages/qiao.indexeddb.js/test/index.html
@@ -17,6 +17,7 @@
     <!-- <script src="../dist/save.js"></script> -->
     <!-- <script src="../dist/del.js"></script> -->
     <!-- <script src="../dist/clear.js"></script> -->
-    <script src="../dist/list-db-sync.js"></script>
+    <!-- <script src="../dist/list-db-sync.js"></script> -->
+    <script src="../dist/del-db-sync.js"></script>
 </body>
 </html>
