--- a/packages/qiao.indexeddb.js/test/index.html
+++ b/packages/qiao.indexeddb.js/test/index.html
@@ -17,7 +17,14 @@
     <!-- <script src="../dist/save.js"></script> -->
     <!-- <script src="../dist/del.js"></script> -->
     <!-- <script src="../dist/clear.js"></script> -->
+
     <!-- <script src="../dist/list-db-sync.js"></script> -->
-    <script src="../dist/del-db-sync.js"></script>
+    <!-- <script src="../dist/del-db-sync.js"></script> -->
+    <!-- <script src="../dist/add-sync.js"></script> -->
+    <!-- <script src="../dist/get-sync.js"></script> -->
+    <!-- <script src="../dist/put-sync.js"></script> -->
+    <!-- <script src="../dist/save-sync.js"></script> -->
+    <!-- <script src="../dist/del-sync.js"></script> -->
+    <script src="../dist/clear-sync.js"></script>
 </body>
 </html>
