--- a/packages/tiyee-url/test/short-url.html
+++ b/packages/tiyee-url/test/short-url.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>get-ip-by-sohu</title>
+    <title>get-ip</title>
 </head>
 <body>
-    <script src="../dist/get-ip-by-sohu.js"></script>
+    <script src="../dist/short-url.js"></script>
 </body>
 </html>
