--- a/packages/qiao.indexeddb.js/test/_index.html
+++ b/packages/qiao.indexeddb.js/test/_index.html
@@ -12,8 +12,8 @@
     <!-- <script src="../dist/create-table.js"></script> -->
     <!-- <script src="../dist/del-table.js"></script> -->
     <!-- <script src="../dist/save.js"></script> -->
-    <script src="../dist/get.js"></script>
-    <!-- <script src="../dist/del.js"></script> -->
+    <!-- <script src="../dist/get.js"></script> -->
+    <script src="../dist/del.js"></script>
     <!-- <script src="../dist/clear.js"></script> -->
 </body>
 </html>
