--- a/packages/qiao.indexeddb.js/test/_index.html
+++ b/packages/qiao.indexeddb.js/test/_index.html
@@ -10,11 +10,11 @@
     <!-- <script src="../dist/list-db.js"></script> -->
     <!-- <script src="../dist/del-db.js"></script> -->
     <!-- <script src="../dist/create-table.js"></script> -->
-    <!-- <script src="../dist/del-table.js"></script> -->
+    <script src="../dist/del-table.js"></script>
     <!-- <script src="../dist/save.js"></script> -->
     <!-- <script src="../dist/get.js"></script> -->
     <!-- <script src="../dist/del.js"></script> -->
     <!-- <script src="../dist/clear.js"></script> -->
-    <script src="../dist/index-get-all.js"></script>
+    <!-- <script src="../dist/index-get-all.js"></script> -->
 </body>
 </html>
