--- a/packages/qiao.indexeddb.js/test/_index.html
+++ b/packages/qiao.indexeddb.js/test/_index.html
@@ -6,10 +6,10 @@
     <title>indexeddb</title>
 </head>
 <body>
-    <script src="../dist/open-db.js"></script>
+    <!-- <script src="../dist/open-db.js"></script> -->
     <!-- <script src="../dist/list-db.js"></script> -->
     <!-- <script src="../dist/del-db.js"></script> -->
-    <!-- <script src="../dist/create-table.js"></script> -->
+    <script src="../dist/create-table.js"></script>
     <!-- <script src="../dist/del-table.js"></script> -->
     <!-- <script src="../dist/save.js"></script> -->
     <!-- <script src="../dist/get.js"></script> -->
